Updated Footer and Spacing issued on most pages

--- a/server/public/footer.css
+++ b/server/public/footer.css
@@ -17,6 +17,7 @@
     padding-top: 3px;
     padding-bottom: 3px;
     text-align: center;
+    bottom:0;
 }
 
 #myFooter .row {
